beetje visuele aanpassingen, en bugfix mijn_gegevens  voor opdrachten waar bieden nog niet voor afgelopen is. +begin om telefoonnummers rechtstreeks op te bellen.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="title_activity_show_details">ShowDetailsActivity</string>
     <string name="stuur_bod">Bieden!</string>
     <string name="min_bod">Minimum bod:</string>
-    <string name="max_bod">Automatisch overbieden tot:</string>
+    <string name="max_bod">Overbieden tot:</string>
     <string name="fb_score">Feedback score:</string>
     <string name="det_huidig_bod">Huidig bod:</string>
     <string name="det_opdr_stand">Jouw opdrachtenstand:</string>
