refresh menu item toegevoegd

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="fb_score">Feedback score:</string>
     <string name="det_huidig_bod">Huidig bod:</string>
     <string name="det_opdr_stand">Jouw opdrachtenstand:</string>
+    <string name="action_refresh">refresh</string>
 
 
 </resources>
