optie toegevoegd om locatie altijd te berekenen vanaf bepaald punt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,8 @@
     <string name="det_huidig_bod">Huidig bod:</string>
     <string name="det_opdr_stand">Jouw opdrachtenstand:</string>
     <string name="action_refresh">refresh</string>
+    <string name="pref_title_def_loc">Start-locatie voor route-berekening</string>
+    <string name="route_start_summary">eg. Diestsesteenweg 423, Leuven, Laat leeg om route te laten berekenen van huidige locatie</string>
 
 
 </resources>
