--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,14 +14,16 @@
     <string name="title_opdracht_details">Details Opdracht</string>
     <string name="title_activity_show_details">ShowDetailsActivity</string>
     <string name="stuur_bod">Bieden!</string>
-    <string name="min_bod">Minimum bod:</string>
-    <string name="max_bod">Overbieden tot:</string>
-    <string name="fb_score">Feedback score:</string>
-    <string name="det_huidig_bod">Huidig bod:</string>
+    <string name="min_bod">Minimum bod: </string>
+    <string name="max_bod">Overbieden tot: </string>
+    <string name="fb_score">Feedback score: </string>
+    <string name="det_huidig_bod">Huidig bod: </string>
     <string name="det_opdr_stand">Jouw opdrachtenstand:</string>
     <string name="action_refresh">refresh</string>
     <string name="pref_title_def_loc">Start-locatie voor route-berekening</string>
     <string name="route_start_summary">eg. Diestsesteenweg 423, Leuven, Laat leeg om route te laten berekenen van huidige locatie</string>
-
-
+    <string name="afspraaktijd">afspraaktijd: </string>
+    <string name="internetverbinding">internetverbinding: </string>
+    <string name="voorkeurstechnieker">voorkeur: </string>
+    <string name="leadOwner">lead owner: </string>
 </resources>
