opdracht wordt doorgegeven via opdrachtnummer, werkt iets sneller normaal. In vorige commit zat ook nog in dat enkel portrait toegelaten is bij de main en showdetailsacitivity

--- a/app/TODO.txt
+++ b/app/TODO.txt
@@ -1,15 +1,13 @@
--Fix voor te annuleren opdrachten bij mijn opdrachten
--Mijn afspraken weergeven
-    -layout bekijken
-
 -Opdrachten permanent opslaan
--Terugknop bij settings
 -scroll to refresh
 -automatische refresh met notificaties
 -enkel voor bieden uit layout fragment halen
--alle velden detail opdracht laten aanmaken ahv generisch layout fragment--> minder hardcoding, meer dynamisch
 -Loading layout fragment maken en gebruiken
 -Trial systeem beter uitwerken
+
+-afspraken mooier weergeven
+-alle velden detail opdracht laten aanmaken ahv generisch layout fragment--> minder hardcoding, meer dynamisch
+-Terugknop bij settings
 
 Te testen:
 -Testen van spoedopdracht
