--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="title_open">Open Opdrachten</string>
     <string name="title_factuur">Facturen</string>
     <string name="title_afspraken">Mijn Afspraken</string>
-    <string name="title_mijn">Mijn Gegevens</string>
+    <string name="title_mijn">Mijn Opdrachten</string>
 
     <string name="loading">Loading...</string>
 
