settings worden nu getoond bij het verkeerd invullen van login-gegevens en aangepast bericht met ok knop komt ook naar boven

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="detail_item_click">Click on detail item</string>
     <string name="open_from_uri">open opdrachtdetails from an URI</string>
     <string name="main_tab_select">OnTabSelected in Mainactivity</string>
+    <string name="ok">OK!</string>
 </resources>
